@@ -49,6 +49,9 @@
 #include <flacfile.h>
 #include <id3v1tag.h>
 #include <id3v2tag.h>
+#include <mp4file.h>
+#include <mp4tag.h>
+#include <mp4item.h>
 #include <mpcfile.h>
 #include <mpegfile.h>
 #include <oggfile.h>
@@ -59,14 +62,8 @@
 #include <vorbisfile.h>
 
 #ifdef TAGLIB_EXTRAS_FOUND
-#include <mp4file.h>
-#include <mp4tag.h>
-#include <mp4item.h>
 #include <audiblefiletyperesolver.h>
-#include <asffiletyperesolver.h>
-#include <wavfiletyperesolver.h>
 #include <realmediafiletyperesolver.h>
-#include <mp4filetyperesolver.h>
 #endif
 
 #include <textidentificationframe.h>
@@ -101,11 +98,8 @@ CollectionScanner::CollectionScanner( int &argc, char **argv )
     readArgs();
 
 #ifdef TAGLIB_EXTRAS_FOUND
-    TagLib::FileRef::addFileTypeResolver(new MP4FileTypeResolver);
-    TagLib::FileRef::addFileTypeResolver(new ASFFileTypeResolver);
     TagLib::FileRef::addFileTypeResolver(new RealMediaFileTypeResolver);
     TagLib::FileRef::addFileTypeResolver(new AudibleFileTypeResolver);
-    TagLib::FileRef::addFileTypeResolver(new WavFileTypeResolver);
 #endif
 
     m_logfile = ( m_batch ? ( m_incremental ? "amarokcollectionscanner_batchincrementalscan.log" : "amarokcollectionscanner_batchfullscan.log" )
@@ -644,7 +638,6 @@ CollectionScanner::readTags( const QString &path, TagLib::AudioProperties::ReadS
 //             if ( images && file->ID3v2Tag() )
 //                 loadImagesFromTag( *file->ID3v2Tag(), *images );
         }
-#ifdef TAGLIB_EXTRAS_FOUND
         else if ( TagLib::MP4::File *file = dynamic_cast<TagLib::MP4::File *>( fileref.file() ) )
         {
             fileType = mp4;
@@ -667,7 +660,6 @@ CollectionScanner::readTags( const QString &path, TagLib::AudioProperties::ReadS
 //                     images->push_back( EmbeddedImage( mp4tag->cover(), "" ) );
             }
         }
-#endif
 
         if ( !disc.isEmpty() )
         {
